WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265671
REGRESSION (
270847@main
): Typing three '.' adds extra periods instead of combining
https://bugs.webkit.org/show_bug.cgi?id=265671
Summary
REGRESSION (270847@main): Typing three '.' adds extra periods instead of comb...
Wenson Hsieh
Reported
2023-12-01 08:45:54 PST
rdar://118971986
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2023-12-01 09:55:11 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21171
EWS
Comment 2
2023-12-01 12:12:03 PST
Committed
271402@main
(3fc6828f0549): <
https://commits.webkit.org/271402@main
> Reviewed commits have been landed. Closing PR #21171 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug